basic html structure for pricing card

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <link rel="stylesheet" href="style.css" />
     <title>Pricing Card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <img src="./assets/Tumbler.jpg" alt="tumbler" />
+      <div class="card__text">
+        <p class="card__text--desc">Tumbler</p>
+        <p class="card__text--price">$15.00</p>
+      </div>
+    </div>
+  </body>
 </html>
